[gd_scene load_steps=19 format=3 uid="uid://q17hscy5nvcb"]

[ext_resource type="Script" path="res://Characters/Enemies/goblin_enemy.gd" id="1_sgvpk"]
[ext_resource type="Texture2D" uid="uid://ct00234ys18j8" path="res://newAssets/goblin/goblin_attack/frame1 (11).png" id="1_sleki"]
[ext_resource type="Texture2D" uid="uid://iuee3bpebca6" path="res://newAssets/goblin/goblin_attack/frame2 (10).png" id="2_gj6gx"]
[ext_resource type="Texture2D" uid="uid://ds0gnvkwjao1o" path="res://newAssets/goblin/goblin_attack/frame3 (11).png" id="3_fc6sa"]
[ext_resource type="Texture2D" uid="uid://b4qcvhtnprcoc" path="res://newAssets/goblin/goblin_attack/frame4 (11).png" id="4_5hh54"]
[ext_resource type="Texture2D" uid="uid://bqhcr2rvcl37p" path="res://newAssets/goblin/Goblin_melee_hurt.png" id="5_abg0s"]
[ext_resource type="Texture2D" uid="uid://bfshh5hyqxowp" path="res://newAssets/goblin/Goblin_melee_walk.png" id="6_ak4dx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x0w7d"]
atlas = ExtResource("5_abg0s")
region = Rect2(20, 0, 26, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymse0"]
atlas = ExtResource("5_abg0s")
region = Rect2(66, 0, 26, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8riyp"]
atlas = ExtResource("6_ak4dx")
region = Rect2(11, 0, 45, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f607l"]
atlas = ExtResource("6_ak4dx")
region = Rect2(59, 0, 45, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdmng"]
atlas = ExtResource("6_ak4dx")
region = Rect2(107, 0, 45, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaxyn"]
atlas = ExtResource("6_ak4dx")
region = Rect2(155, 0, 44, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2f43"]
atlas = ExtResource("6_ak4dx")
region = Rect2(205, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfata"]
atlas = ExtResource("6_ak4dx")
region = Rect2(256, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_2xv0s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_sleki")
}, {
"duration": 1.0,
"texture": ExtResource("2_gj6gx")
}, {
"duration": 1.0,
"texture": ExtResource("3_fc6sa")
}, {
"duration": 1.0,
"texture": ExtResource("4_5hh54")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0w7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymse0")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8riyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f607l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdmng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaxyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2f43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfata")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig16r"]
size = Vector2(15, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8dn3"]
size = Vector2(29, 28)

[node name="goblinEnemy" type="CharacterBody2D"]
script = ExtResource("1_sgvpk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2xv0s")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.533153

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 22)
shape = SubResource("RectangleShape2D_ig16r")

[node name="enemyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyArea"]
position = Vector2(-4.5, 4)
shape = SubResource("RectangleShape2D_v8dn3")

[connection signal="area_entered" from="enemyArea" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="enemyArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="enemyArea" to="." method="_on_area_2d_body_exited"]
